kubernetes/musixtream-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musixtream-backend
  namespace: musixtream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musixtream
      tier: backend
  template:
    metadata:
      labels:
        app: musixtream
        tier: backend
    spec:
      containers:
        - name: musixtream-backend
          image: dudesjef/musixtream-backend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
      restartPolicy: Always
      automountServiceAccountToken: false
