kubernetes/musixtream-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musixtream
  namespace: musixtream
spec:
  selector:
    app: musixtream
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
