kubernetes/musixtream-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: musixtream
spec:
  selector:
    app: musixtream
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
