kubernetes/musixtream-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musixtream-backend-ingress
  namespace: musixtream
spec:
  rules:
    - host: api.musixtream
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: musixtream-backend-service
                port:
                  number: 80
