kubernetes/musixtream-networking.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gatewayclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: musixtream-httproute
spec:
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: musixtream-backend-service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
